# selectDefault

./: CMakeLists.txt  README.md  doxygen.cmake  select_default.h  select_default_test.cpp  select_test.cpp  test_util.cpp  test_util.h  testing.cmake
src/: select.h  select_default.h  select_if.h  select_or_default.h  select_util.h
test/: CMakeLists.txt  research.cpp  select_if_test.cpp  select_or_default_test.cpp  select_test.cpp  test_util.cpp  test_util.h
